# KithAgent

./: .gitignore  CODEBASE.md  CONVERSATION_SUMMARY.md  OPENCLAW_HERMES_RESEARCH.md  README.md  README.zh-CN.md  ROUND_DIALOG_SUMMARY_2026-04-14.md  pyproject.toml  requirements.txt
.cursor/plans/: agentos_llm_evolution_fdac4bb4.plan.md  agentos_v0.5_architecture_24f52298.plan.md
.cursor/skills/agent-sys-file-search/: SKILL.md
agent_sys/: __init__.py
agent_sys.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: default.yaml
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src/main/: apiBaseUrl.js  daemon.js  frontendChat.js  main.js  sse.js
desktop/src/preload/: preload.js
desktop/src/renderer/: index.html  vite-env.d.ts
desktop/test/: daemon.test.js
docs/: ROADMAP.md
skills/agent-sys-admin/: SKILL.md
skills/agent-sys-file-search/: SKILL.md
skills/agent-sys-user-context/: SKILL.md
src/: __init__.py  cli.py  cli_ui.py  extractors.py  insights.py
src/agents/: analyzer.py  assistant.py  base.py  builtin.py  prioritizer.py  profile_builder.py  rag_indexer.py  reporter.py  summarizer.py  triage.py
src/filesystem/: watcher.py
src/ingest/: __init__.py  browser_history.py
src/kernel/: config.py  cron.py  daemon.py  event_bus.py  user_settings.py
src/llm/: base.py  claude_adapter.py  compatible_adapter.py  openai_adapter.py  router.py
src/memory/: chunking.py  embeddings.py  store.py
src/scheduler/: pool.py
src/syscall/: client.py  protocol.py  server.py
src/web/: _utils.py  dashboard.html  dashboard.py  routing-ui.js
src/web/api/: __init__.py  clusters.py  daemon.py  events.py  insights.py  knowledge.py  llm_config.py  overview.py  rag.py  scheduling.py  search.py  triage.py
src/web/static/: app.js  common.js  dashboard.css  events.js  files.js  insights.js  (+8 more)
tests/: conftest.py  test_cli_backend.py  test_cron_fallback.py  test_cron_triage_summarizer_order.py  test_llm_key_validation.py  test_memory_store.py  test_rag_pipeline.py  test_syscall_auth.py  test_triage_rules.py
(+17 files in other folders)
