[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sys"
version = "0.2.0"
description = "AgentOS — A system-level agent daemon that maps traditional OS concepts to LLM agent architecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
full = [
    "watchdog>=4.0",       # real-time file system events
    "aiohttp>=3.9",        # HTTP API transport
    "openai>=1.0",         # OpenAI API
    "anthropic>=0.30",     # Anthropic Claude API
]
lite = [
    "watchdog>=4.0",
    "aiohttp>=3.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agent-sys = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
