[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sys"
version = "0.7.0"
description = "A long-running agent daemon that indexes user files and exposes an LLM-powered RPC surface for external agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
full = [
    "watchdog>=4.0",
    "aiohttp>=3.9",
    "openai>=1.0",
    "anthropic>=0.30",
]
lite = [
    "watchdog>=4.0",
    "aiohttp>=3.9",
]
docs = [
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
]
embeddings = [
    "sentence-transformers>=2.7",
    "numpy>=1.26,<2.3",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agent-sys = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*", "agent_sys*"]

[tool.pytest.ini_options]
# Tests avoid pytest-asyncio on purpose — each async case is wrapped in
# `asyncio.run` so the suite runs with a bare pytest install.
testpaths = ["tests"]
